# server

./: .gitignore  Cargo.toml  README.md  build.rs
.githooks/: pre-push
.github/workflows/: publish.yml
apis/: graphql.graphql
src/: banner.rs  cron_jobs.rs  error.rs  error_tests.rs  graphql_types.rs  lib.rs  main.rs  middleware.rs  server.rs  storage.rs  storage_tests.rs  system_cron.rs  system_cron_tests.rs
src/middlewares/: fs_location.rs  fs_location_tests.rs
src/paths/: mod.rs  mod_tests.rs
src/routes/: graphql.rs  http.rs  http_tests.rs  mcp.rs
src/ui/: index.html
ui/: index.html
ui/src/: main.rs
