[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
] }

# Native-only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
actix-web = "4"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
cron = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"
