[package]
name = "server"
version = "0.1.0"
edition = "2021"

# Shared (native + WASM)
[dependencies]
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

# Native-only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
cron = "0.12"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "server"
path = "src/main.rs"

[build-dependencies]
async-graphql = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
all = "deny"
